<resources>
    <string name="app_name">Мандри історією України</string>
    <string name="start_game">Старт</string>
    <string name="events_archive">Архів</string>
    <string name="quizzes">Тести</string>
    <string name="select_history">Оберіть історію</string>
    <string name="description_left_character">Опис лівого персонажу</string>
    <string name="economy">Економія</string>
    <string name="politics">Політика</string>
    <string name="culture">Культура</string>
    <string name="description_right_character">Опис правого персонажу</string>
    <string name="exit">Вихід</string>
    <string name="question">Запитання</string>
    <string name="wrireanswer">Введіть відповідь тут</string>
    <string name="nextquestion">Наступне запитання</string>
    <string name="selectskif">Скіфи</string>
    <string name="finish_history">Історія завершена</string>
    <string name="scy1">Походження та Розселення</string>
    <string name="scy2">Ранні скіфи були північно-східними давньоіранськими племенами, що походили зі степів між Каспієм, Уралом та Кавказом. Вони були войовничим кочовим народом, чия агресія спочатку була спрямована проти давньосхідних держав.</string>
    <string name="scy3">Військові Традиції та Зброя</string>
    <string name="scy4">Війна була головним заняттям скіфів, джерелом збагачення. Вони мали високорозвинену військову культуру та зброю, особливо відомі своєю кіннотою та луками складної конструкції.</string>
    <string name="scy5">Політичне Формування та Розділення Скіфії</string>
    <string name="scy6">Наприкінці VII ст. до н. е. скіфи завершили політичне формування власної держави у причорноморських степах. У VI ст. до н. е. Скіфія розділилася на три царства, кожне з яких мало свого царя.</string>
    <string name="scy7">Вплив Грецької Колонізації</string>
    <string name="scy8">Грецька колонізація Причорномор\'я справила значний вплив на культуру і суспільний лад Скіфії, сприяючи поширенню досягнень античної цивілізації.</string>
    <string name="scy9">Поразка Дарія І та Розквіт Скіфії</string>
    <string name="scy10">У 512 р. до н. е. скіфи перемогли перське військо під керівництвом Дарія І, що принесло їм славу непереможних воїнів. Розквіт Скіфії припадає на час правління царя Атей.</string>
    <string name="scy11">Занепад Скіфської Держави</string>
    <string name="scy12">На межі IV—III ст. до н. е. почався поступовий занепад скіфської держави, що завершився нападом сарматів.</string>
    <string name="scy13">Культура та Релігія</string>
    <string name="scy14">Скіфи мали багату культуру, вірили в багатьох богів і мали складні поховальні обряди. Вони відзначалися звіриним стилем у мистецтві та прикрасах.</string>
    <string name="scy15">Вплив на Праслов\'ян</string>
    <string name="scy16">Хоча скіфи не мали вирішального впливу на етнічний та культурний розвиток праслов\'ян, деякі скіфські звичаї та релігійні уявлення поширилися серед праслов\'янських племен.</string>
    <string name="scy">Скіфи</string>

</resources>