<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/steppes">

    <!-- Початково персонаж прихований -->

    <ImageView
        android:id="@+id/imageLeftCharacter"
        android:layout_width="260dp"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="400dp"
        android:visibility="invisible"
        android:contentDescription="@string/description_left_character" />

    <ImageView
        android:id="@+id/imageRightCharacter"
        android:layout_width="220dp"
        android:layout_height="620dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-7dp"
        android:layout_marginTop="110dp"
        android:visibility="invisible"
        android:contentDescription="@string/description_right_character" />

    <ImageView
        android:id="@+id/imageRightCharacter2"
        android:layout_width="280dp"
        android:layout_height="650dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="100dp"
        android:visibility="visible"
        android:contentDescription="@string/description_right_character" />


    <TextView
        android:id="@+id/bg_shape"
        android:layout_width="230dp"
        android:layout_height="150dp"
        android:layout_alignStart="@id/imageLeftCharacter"
        android:layout_alignTop="@id/imageLeftCharacter"
        android:layout_marginStart="170dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@id/imageLeftCharacter"
        android:background="@drawable/bg_shape"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/textStory"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_alignStart="@id/imageLeftCharacter"
        android:layout_alignTop="@id/imageLeftCharacter"
        android:layout_marginStart="205dp"
        android:layout_marginTop="115dp"
        android:layout_toEndOf="@id/imageLeftCharacter"
        android:background="@android:color/transparent"
        android:textColor="#411001"
        android:padding="8dp"
        android:textSize="12sp"
        android:fontFamily="@font/craftworkgrotesksemibold"
        android:gravity="center"
        android:visibility="invisible"
        />




    <TextView
        android:id="@+id/bg_shape2"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_alignEnd="@id/imageRightCharacter"
        android:layout_alignTop="@id/imageRightCharacter"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="350dp"
        android:layout_toStartOf="@id/imageLeftCharacter"
        android:background="@drawable/bg_shapeleft"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/textStory2"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_alignEnd="@id/imageRightCharacter"
        android:layout_alignTop="@id/imageRightCharacter"
        android:layout_marginEnd="190dp"
        android:layout_marginTop="380dp"
        android:layout_toStartOf="@id/imageRightCharacter"
        android:background="@android:color/transparent"
        android:textColor="#411001"
        android:padding="8dp"
        android:fontFamily="@font/craftworkgrotesksemibold"
        android:textSize="12sp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/bg_shape3"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_alignEnd="@id/imageRightCharacter2"
        android:layout_alignTop="@id/imageRightCharacter2"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="350dp"
        android:layout_toStartOf="@id/imageLeftCharacter"
        android:background="@drawable/bg_shapeleft"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/textStory3"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_alignEnd="@id/imageRightCharacter2"
        android:layout_alignTop="@id/imageRightCharacter2"
        android:layout_marginEnd="190dp"
        android:layout_marginTop="380dp"
        android:layout_toStartOf="@id/imageRightCharacter2"
        android:background="@android:color/transparent"
        android:textColor="#411001"
        android:padding="8dp"
        android:fontFamily="@font/craftworkgrotesksemibold"
        android:textSize="12sp"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/authorsh"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/rectangle"
        android:textColor="#411001"
        android:padding="16dp"
        android:fontFamily="@font/craftworkgrotesksemibold"
        android:textSize="12sp"
        android:visibility="invisible"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="180dp"
        android:layout_alignParentBottom="true"
        android:padding="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageButton
                android:id="@+id/btnEconomy"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btsm"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/txtEconomy"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textColor="#F6E5AE"
                android:textSize="16sp"
                android:text="@string/economy"
                android:fontFamily="@font/actavinia"
                android:gravity="center"
                android:visibility="invisible"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btnCulture"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/btsm"
                android:gravity="center"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/txtCulture"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textColor="#F6E5AE"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:text="@string/culture"
                android:fontFamily="@font/actavinia"
                android:gravity="center"
                android:visibility="invisible"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <ImageButton
            android:id="@+id/btnPolitics"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/btsm"
            android:gravity="center"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/txtPolitics"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="#F6E5AE"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:text="@string/politics"
            android:fontFamily="@font/actavinia"
            android:gravity="center"
            android:visibility="invisible"/>
        </RelativeLayout>



    </LinearLayout>

<LinearLayout
    android:layout_width="1080dp"
    android:layout_height="1920dp">

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btbac2"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"/>
</LinearLayout>


</RelativeLayout>
